Source/WebCore: https://bugs.webkit.org/show_bug.cgi?id=51119, transformed elements not responding properly to :hover after r73385. Just use the entire document area as the hit test area, since there appears to be a rounding bug/issues with relying on float math when mapping the hit test area into transformed coordinates.

Patch by David Hyatt <hyatt@apple.com> on 2010-10-10
Reviewed by Simon Fraser.

* rendering/RenderLayer.cpp:
(WebCore::RenderLayer::hitTest):

LayoutTests: Test for https://bugs.webkit.org/show_bug.cgi?id=51119

Patch by David Hyatt <hyatt@apple.com> on 2011-01-10
Reviewed by Simon Fraser.

* fast/transforms/transform-hit-test-flipped-expected.txt: Added.
* fast/transforms/transform-hit-test-flipped.html: Added.



git-svn-id: svn://svn.chromium.org/blink/trunk@75472 bbb929c8-8fbe-4397-9dbb-9b2b20218538